5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1590_2894.log
== TEST (2019-03-21 13:10:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1= float(input("Qual o valor unitario do jogo? "))
frete=float(45,0) 
# Calculo do valor a ser pago, incluindo o frete:
total = (var1*8)+frete
# Impressao do valor total:
print("Valor a ser pago:"R$"total)
-- ERROR:
File "XXXX", line 10
    print("Valor a ser pago:"R$"total)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:10:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1= float(input()
frete=float(45,0) 
# Calculo do valor a ser pago, incluindo o frete:
total = (var1*8)+frete
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 6
    frete=float(45,0) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:11:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1= float(input()
frete=(45,0) 
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 6
    frete=(45,0) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:12:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input(152)
frete=(45,0) 
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45,0) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:13:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45,0)				
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45,0)				
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:14:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45)

# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:14:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45)
print(var1)
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:14:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input(152.99)
frete=(45)
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:15:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input(152.99)
frete=(45)
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print((var1)"Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:15:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input(152.99)
frete=(45)
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print((var1)"Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:15:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input(152.99)
frete=(45)
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1)+frete)
# Impressao do valor total:
print((var1)"Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45)
print(var1)
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print("Valor a ser pago:"total)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45)

# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45)

# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
frete=(45)

# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+frete)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 5
    frete=(45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")

# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+45)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 7
    total = float((var1*8)+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")

# Calculo do valor a ser pago, incluindo o frete:
total = float((var1*8)+45)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 7
    total = float((var1*8)+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:17:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1+45)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 6
    total = float((var1+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:18:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
# Calculo do valor a ser pago, incluindo o frete:
total = float((var1+45)
# Impressao do valor total:
print(var1)
-- EXECUTION TIME:
0.220879
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 6
    total = float((var1+45)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:18:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
# Calculo do valor a ser pago, incluindo o frete:
total = float(var1+45)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 6
    total = float(var1+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:18:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
# Calculo do valor a ser pago, incluindo o frete:
total = float(var1)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 6
    total = float(var1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:18:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
# Leitura das entradas e conversao para float:
var1= float(input("Qual é o valor do jogo:")
# Calculo do valor a ser pago, incluindo o frete:
total = float(var1)
# Impressao do valor total:
print(var1)
-- ERROR:
File "XXXX", line 6
    total = float(var1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:20:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1+45

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 11
    print(?????)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:20:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1+45

# Impressao do valor total:
print(?total)
-- ERROR:
File "XXXX", line 11
    print(?total)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:20:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:20:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:21:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.182191
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:21:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1*8+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:21:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.204701
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var1*8+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
